Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/receiver/DeclarationAnnotation.out
DeclarationAnnotation.java:14:14: compiler.err.annotation.type.not.applicable.to.type: DA
1 error
